--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,8 +10,10 @@
     %p.notice= notice
     %p.alert= alert
 
-  - unless user_signed_in?
-    = user_omniauth_authorize_path(:facebook)
+  - if user_signed_in?
+    = "Hi, #{current_user.name}!"
+    = image_tag(current_user.image_url)
+  - else
     = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
 
     = yield
