--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     %p.alert= alert
 
   - if user_signed_in?
-    = "Logged in as #{current_user.name}"
+    != "Logged in as #{current_user.name} (" + link_to("Logout", destroy_user_session_path, :method => :delete) + ")"
     / = image_tag(current_user.image_url)
     %h2 Add debt
     = link_to "I must pay someone", create_transfer_path(:type => "send")
