--- a/app/views/transfers/send.html.haml
+++ b/app/views/transfers/send.html.haml
@@ -10,7 +10,7 @@
     %tr
       = f.hidden_field :debtor_id
       
-      %td= select("transfer", "creditor_id", User.where("users.id != ?", current_user.id).all.collect {|p| [ p.name, p.id ] })
+      %td= select("transfer", "creditor_id", current_user.friends.order(:name).collect {|p| [ p.name, p.id ] })
       %td me
       %td= f.text_field :amount
       %td= f.text_field :message
