--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,17 +7,18 @@
     = csrf_meta_tags
 
   %body
-    %p.notice= notice
-    %p.alert= alert
+    .container
+      %p.notice= notice
+      %p.alert= alert
 
-  - if user_signed_in?
-    != "Logged in as #{current_user.name} (" + link_to("Logout", destroy_user_session_path, :method => :delete) + ")"
-    / = image_tag(current_user.image_url)
-    %h2 Add debt
-    = link_to "I must pay someone", create_transfer_path(:type => "send")
-    %br
-    = link_to "Someone must pay me", create_transfer_path(:type => "receive")
-  - else
-    = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
+      - if user_signed_in?
+        != "Logged in as #{current_user.name} (" + link_to("Logout", destroy_user_session_path, :method => :delete) + ")"
+        / = image_tag(current_user.image_url)
+        %h2 Add debt
+        = link_to "I must pay someone", create_transfer_path(:type => "send")
+        %br
+        = link_to "Someone must pay me", create_transfer_path(:type => "receive")
+      - else
+        = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
 
-  = yield
+      = yield
