--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,18 +7,20 @@
     = csrf_meta_tags
 
   %body
+    - if notice
+      .alert-message.success= notice
+    
+    - if alert
+      .alert-message.error= alert
+  
     .container
-      %p.notice= notice
-      %p.alert= alert
-
       - if user_signed_in?
-        != "Logged in as #{current_user.name} (" + link_to("Logout", destroy_user_session_path, :method => :delete) + ")"
-        / = image_tag(current_user.image_url)
-        %h2 Add debt
-        = link_to "I must pay someone", create_transfer_path(:type => "send")
-        %br
-        = link_to "Someone must pay me", create_transfer_path(:type => "receive")
+        .user_info!= "Logged in as #{current_user.name} (" + link_to("Logout", destroy_user_session_path, :method => :delete) + ")"
       - else
-        = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
+        = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), :class => "btn"
 
+        / = image_tag(current_user.image_url)
+        
+
+        
       = yield
