--- a/app/views/transfers/send.html.haml
+++ b/app/views/transfers/send.html.haml
@@ -15,4 +15,4 @@
       %td= f.text_field :amount
       %td= f.text_field :message
   
-  = f.submit "Submit"
+  = f.submit "Submit", :class => "btn"
