--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
   
     .container
       - if user_signed_in?
-        .user_info!= "Logged in as #{current_user.name} (" + link_to("Logout", destroy_user_session_path, :method => :delete) + ")"
+        .user_info!= image_tag(current_user.profile_pic_url, :size => "25x25", :class => "profile_pic") + "Logged in as #{current_user.name} (" + link_to("Logout", destroy_user_session_path, :method => :delete) + ")"
       - else
         = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), :class => "btn"
 
